--- a/Dicee-iOS13/Dicee-iOS13/Base.lproj/Main.storyboard
+++ b/Dicee-iOS13/Dicee-iOS13/Base.lproj/Main.storyboard
@@ -39,11 +39,18 @@
                                 <state key="normal" title="Roll">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="rollBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g2t-Sw-nkN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="diceImageView1" destination="mM1-ac-WFD" id="3su-P9-6fw"/>
+                        <outlet property="diceImageView2" destination="ir1-hv-0iT" id="E5b-by-kLn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
